Improved utility classes, fancier fonts + transitions

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,6 +19,7 @@
 @import "flex.scss";
 @import "margins.scss";
 @import "paddings.scss";
+@import "typography.scss";
 
 //! Modules
 @import "forms.scss";
@@ -26,9 +27,14 @@
 //! App-Wide Stylings
 //* Ideally only very basic or very specific CSS rules declared here
 
+html {
+  overflow-x: hidden; //* Seems to prevent Recaptcha from oversizing Mobile
+}
+
 //* Example of a very basic one
 body {
     background-color: $cyan;
+    min-width: 280px !important; //* Helps the new smallest mobile device Galaxy Fold
 }
 
 h1,
@@ -36,6 +42,18 @@ h2,
 h3 {
     font-weight: bold;
     color: #fff !important;
+}
+
+a { //* Hyperlink consistency is ALWAYS best
+  color: #fff;
+  font-weight: bold;
+  text-decoration: underline;
+  &:hover {
+    color: $light-accent;
+  }
+}
+i { //* Prevents icons from getting parent stylings (like underlines)
+  text-decoration: none !important;
 }
 
 .ui.divider {
@@ -77,3 +95,53 @@ h3 {
         background-color: $light-accent !important;
     }
 }
+
+//? CSS Conventions to consider
+//! BEM Convention */
+/* Example Modifier - Uses '--' to notate a modifier and what it does
+.table-body-row--orange {
+  background-color: orange;
+}
+*/
+/* Example Child Element - Uses '__' to notate a child element and it's base styling
+.table-body-row__table-data {
+  background-color: blue;
+}
+*/
+
+//! OOCSS may be better option despite complexity thanks to Sass */
+//* Reasoning */
+/* 1st rule - Separate structure from skin - DRY
+   Structure - less noticeable props - height, margins, border-radius 
+   Skin - Immediately apparent props - color, font, shadows, gradients */
+/* 2nd rule - Separate content from container - Increase reusability by avoiding child selectors
+   Instead of table .list .list-header -> .list-header will do just fine! and can be repurposed outside of this specific table
+   Instead of #sidebar -> .sidebar works just as well and becomes reusable! */
+/* With these concepts in mind, leveraging SCSS makes OOCSS even more simple
+   1. Use '%' - 'placeholder selector' to create skins & structures you can @extend (Prevents risky @extend's that step on each other)
+   2. Use '&' to create suffixes within classes that help specify needs of particular html elem
+   Ex: 
+%button {
+  min-width: 100px;
+  padding: 1em;
+  border-radius: 1em;
+}
+%twitter-bg {
+  background-color: #55acee;
+  color: #fff;
+}
+
+   Now you can choose to place @extend %button either in the '&' or applying it to all of .btn!
+.btn {
+  &--twitter {
+    @extend %button;
+    @extend %twitter-background;
+  }
+}
+.btn {
+  @extend %button;
+  &--twitter {
+    @extend %twitter-background;
+  }
+}
+*/
