--- a/resources/sass/borders.scss
+++ b/resources/sass/borders.scss
@@ -1,6 +1,7 @@
 @import 'utility.scss';
 //* Goal is to form various colors and styles of borderings
 //* Format: .border-side-color E.g. border-r-light or border-y-white
+//* .rounded-side vs border-side-color
 
 $rounded-sides: ('l', 'r', 'x', 'none');
 
