--- a/resources/sass/paddings.scss
+++ b/resources/sass/paddings.scss
@@ -1,6 +1,6 @@
 @import 'utility.scss';
 
-$padding-classes: ("no-padding":$spacer-0,
+$padding-classes: ("p-0":$spacer-0,
   'p-xs':$spacer-1,
   'p-sm':$spacer-2,
   'p-md':$spacer-3,
