--- a/resources/sass/transitions.scss
+++ b/resources/sass/transitions.scss
@@ -1,10 +1,10 @@
 //! Fade
 .fade-enter-active,
 .fade-leave-active {
-    transition: opacity 1s ease;
+    transition: opacity 0.7s ease;
 }
 
-.fade-enter,
+.fade-enter-from,
 .fade-leave-to {
     opacity: 0;
 }
@@ -28,7 +28,7 @@
 }
 
 //? Standard Slide - Enters from left moving right. Leaves left
-.slide-enter,
+.slide-enter-from,
 .slide-leave-to {
     @include move-right;
 }
@@ -58,13 +58,13 @@
     @include slide-transition;
 }
 
-.slide-left-enter,
+.slide-left-enter-from,
 .slide-right-leave-active {
     @include move-left;
 }
 
 .slide-left-leave-active,
-.slide-right-enter {
+.slide-right-enter-from {
     @include move-right;
 }
 
@@ -108,7 +108,7 @@
 }
 
 //! Flip
-.flip-enter {
+.flip-enter-from {
     transform: rotateY(-180deg);
 }
 .flip-enter-active {
@@ -118,7 +118,7 @@
     transform: rotateY(0deg);
     opacity: 1;
 }
-.flip-leave {
+.flip-leave-from {
     transform: rotateY(0deg);
     opacity: 1;
 }
@@ -142,7 +142,7 @@
     filter: blur(0);
     opacity: 1;
 }
-.blur-leave {
+.blur-leave-from {
     filter: blur(0px);
     opacity: 1;
 }
